--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,34 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#fff" >
-
-    <TextView
-        android:id="@+id/tvHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dp"
-        android:layout_marginTop="20dp"
-        android:text="Heading: 0.0" />
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relativelayout"
+    android:padding="22dp"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
     <ImageView
-        android:id="@+id/imageViewCompass"
+        android:id="@+id/myImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvHeading"
+        android:src="@drawable/counterclockwise2"
+        android:adjustViewBounds="true"
+        android:maxWidth="200dp"
+        android:maxHeight="200dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/img_compass" />
+        android:scaleType="fitCenter"/>
+
+    <TextView
+        android:id="@+id/myImageViewText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/myImage"
+        android:layout_alignTop="@id/myImage"
+        android:layout_alignRight="@id/myImage"
+        android:layout_alignBottom="@id/myImage"
+        android:layout_margin="1dp"
+        android:textStyle="bold"
+        android:text="0.0"
+        android:gravity="center"
+        android:textColor="#ffffff"
+        android:textSize="35dp" />
 
 </RelativeLayout>
