--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,32 +3,52 @@
     android:id="@+id/relativelayout"
     android:padding="22dp"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-
-    <ImageView
-        android:id="@+id/myImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/counterclockwise2"
-        android:adjustViewBounds="true"
-        android:maxWidth="200dp"
-        android:maxHeight="200dp"
-        android:layout_centerHorizontal="true"
-        android:scaleType="fitCenter"/>
+    android:layout_height="fill_parent"
+    android:background="#ec12537e">
 
     <TextView
-        android:id="@+id/myImageViewText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/myImage"
-        android:layout_alignTop="@id/myImage"
-        android:layout_alignRight="@id/myImage"
-        android:layout_alignBottom="@id/myImage"
-        android:layout_margin="1dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Place the device over the antenna."
+        android:textSize="20dp"
+        android:textAlignment="center"
         android:textStyle="bold"
-        android:text="0.0"
-        android:gravity="center"
+        android:id="@+id/textView"
+        android:textColor="#fffbf8"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/tvHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:text="Heading: 0.0"
+
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:id="@+id/smartphone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/satellite_platform"
+        android:adjustViewBounds="true"
+        android:maxWidth="300dp"
+        android:maxHeight="300dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="35dp"
+        android:text="OK"
+        android:id="@+id/okButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:textColor="#ffffff"
-        android:textSize="35dp" />
+        android:background="#53e4db" />
+
+
 
 </RelativeLayout>
