change color ui

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:padding="22dp"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#ec12537e">
+    android:background="#d5f3f6">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,14 +15,14 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:id="@+id/textView"
-        android:textColor="#fffbf8"
+        android:textColor="#ec0f2c4a"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
     <TextView
         android:id="@+id/tvHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:text="Heading: 0.0"
 
         android:layout_below="@+id/textView"
@@ -47,7 +47,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:textColor="#ffffff"
-        android:background="#53e4db" />
+        android:background="#38d6f4" />
 
 
 
