--- a/app/src/main/res/layout/calibrate_page.xml
+++ b/app/src/main/res/layout/calibrate_page.xml
@@ -23,7 +23,7 @@
         android:id="@+id/tvHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:text="Heading: 0.0"
 
         android:layout_below="@+id/textView"
@@ -48,7 +48,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:textColor="#ffffff"
-        android:background="#2ee477" />
+        android:background="#35aecc" />
 
 
 
