--- a/app/src/main/res/layout/calibrate_page.xml
+++ b/app/src/main/res/layout/calibrate_page.xml
@@ -23,7 +23,7 @@
         android:id="@+id/tvHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:text="Heading: 0.0"
 
         android:layout_below="@+id/textView"
